
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_8__ TYPE_4__ ;
typedef struct TYPE_7__ TYPE_3__ ;
typedef struct TYPE_6__ TYPE_2__ ;
typedef struct TYPE_5__ TYPE_1__ ;


struct TYPE_7__ {int length; int * pointer; } ;
struct TYPE_5__ {int value; } ;
union acpi_object {scalar_t__ type; TYPE_3__ buffer; TYPE_1__ integer; } ;
typedef int u8 ;
typedef int u32 ;
struct TYPE_8__ {int length; int * pointer; } ;
struct TYPE_6__ {int length; int * pointer; } ;
struct acpi_osc_context {int rev; TYPE_4__ ret; TYPE_2__ cap; int uuid_str; } ;
struct acpi_object_list {int count; union acpi_object* pointer; } ;
struct acpi_buffer {int member_0; union acpi_object* pointer; int length; int * member_1; } ;
typedef scalar_t__ acpi_status ;
typedef int acpi_handle ;


 int ACPI_ALLOCATE_BUFFER ;
 scalar_t__ ACPI_FAILURE (scalar_t__) ;
 scalar_t__ ACPI_TYPE_BUFFER ;
 void* ACPI_TYPE_INTEGER ;
 scalar_t__ AE_ERROR ;
 scalar_t__ AE_NO_MEMORY ;
 scalar_t__ AE_NULL_OBJECT ;
 scalar_t__ AE_OK ;
 scalar_t__ AE_SUPPORT ;
 scalar_t__ AE_TYPE ;
 int GFP_KERNEL ;
 int OSC_CAPABILITIES_MASK_ERROR ;
 int OSC_INVALID_REVISION_ERROR ;
 int OSC_INVALID_UUID_ERROR ;
 int OSC_QUERY_ENABLE ;
 size_t OSC_QUERY_TYPE ;
 int OSC_REQUEST_ERROR ;
 scalar_t__ acpi_evaluate_object (int ,char*,struct acpi_object_list*,struct acpi_buffer*) ;
 int acpi_print_osc_error (int ,struct acpi_osc_context*,char*) ;
 scalar_t__ acpi_str_to_uuid (int ,int *) ;
 int kfree (union acpi_object*) ;
 int * kmalloc (int,int ) ;
 int memcpy (int *,int *,int) ;

acpi_status acpi_run_osc(acpi_handle handle, struct acpi_osc_context *context)
{
 acpi_status status;
 struct acpi_object_list input;
 union acpi_object in_params[4];
 union acpi_object *out_obj;
 u8 uuid[16];
 u32 errors;
 struct acpi_buffer output = {ACPI_ALLOCATE_BUFFER, ((void*)0)};

 if (!context)
  return AE_ERROR;
 if (ACPI_FAILURE(acpi_str_to_uuid(context->uuid_str, uuid)))
  return AE_ERROR;
 context->ret.length = ACPI_ALLOCATE_BUFFER;
 context->ret.pointer = ((void*)0);


 input.count = 4;
 input.pointer = in_params;
 in_params[0].type = ACPI_TYPE_BUFFER;
 in_params[0].buffer.length = 16;
 in_params[0].buffer.pointer = uuid;
 in_params[1].type = ACPI_TYPE_INTEGER;
 in_params[1].integer.value = context->rev;
 in_params[2].type = ACPI_TYPE_INTEGER;
 in_params[2].integer.value = context->cap.length/sizeof(u32);
 in_params[3].type = ACPI_TYPE_BUFFER;
 in_params[3].buffer.length = context->cap.length;
 in_params[3].buffer.pointer = context->cap.pointer;

 status = acpi_evaluate_object(handle, "_OSC", &input, &output);
 if (ACPI_FAILURE(status))
  return status;

 if (!output.length)
  return AE_NULL_OBJECT;

 out_obj = output.pointer;
 if (out_obj->type != ACPI_TYPE_BUFFER
  || out_obj->buffer.length != context->cap.length) {
  acpi_print_osc_error(handle, context,
   "_OSC evaluation returned wrong type");
  status = AE_TYPE;
  goto out_kfree;
 }

 errors = *((u32 *)out_obj->buffer.pointer) & ~(1 << 0);
 if (errors) {
  if (errors & OSC_REQUEST_ERROR)
   acpi_print_osc_error(handle, context,
    "_OSC request failed");
  if (errors & OSC_INVALID_UUID_ERROR)
   acpi_print_osc_error(handle, context,
    "_OSC invalid UUID");
  if (errors & OSC_INVALID_REVISION_ERROR)
   acpi_print_osc_error(handle, context,
    "_OSC invalid revision");
  if (errors & OSC_CAPABILITIES_MASK_ERROR) {
   if (((u32 *)context->cap.pointer)[OSC_QUERY_TYPE]
       & OSC_QUERY_ENABLE)
    goto out_success;
   status = AE_SUPPORT;
   goto out_kfree;
  }
  status = AE_ERROR;
  goto out_kfree;
 }
out_success:
 context->ret.length = out_obj->buffer.length;
 context->ret.pointer = kmalloc(context->ret.length, GFP_KERNEL);
 if (!context->ret.pointer) {
  status = AE_NO_MEMORY;
  goto out_kfree;
 }
 memcpy(context->ret.pointer, out_obj->buffer.pointer,
  context->ret.length);
 status = AE_OK;

out_kfree:
 kfree(output.pointer);
 if (status != AE_OK)
  context->ret.pointer = ((void*)0);
 return status;
}
